# soloforge

./: .env  .env.example  README.md  package-lock.json  package.json
COLTON-/: README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json
COLTON-/public/: manifest.json
COLTON-/src/: App.tsx  (+2 more)
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 861f1fa78ca2_add_knowledge_base_and_documents.py  f731b301f196_create_users_table.py  f9825b02c5c8_add_content_creations.py
apps/api/src/soloforge_api/: __init__.py  config.py  main.py
apps/api/src/soloforge_api/application/interfaces/: __init__.py  db.py
apps/api/src/soloforge_api/application/services/: ai_service.py
apps/api/src/soloforge_api/application/use_cases/: analytics.py  auth.py  content.py  health.py  knowledge.py
apps/api/src/soloforge_api/domain/models/: __init__.py  content.py  knowledge.py  user.py
apps/api/src/soloforge_api/infrastructure/: db.py
apps/api/src/soloforge_api/infrastructure/middleware/: error_handling.py  logging.py  rate_limit.py
apps/api/src/soloforge_api/presentation/routers/: analytics.py  auth.py  content.py  health.py  knowledge.py
apps/api/src/soloforge_api/presentation/schemas/: analytics.py  auth.py  content.py  health.py  knowledge.py
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/src/soloforge_worker/: __init__.py  config.py  main.py
apps/worker/src/soloforge_worker/tasks/: example.py
(+25 files in other folders)
