[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soloforge-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "email-validator>=2.1.0",
    "soloforge-ai",
]

[tool.setuptools.packages.find]
where = ["src"]
