[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soloforge-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "soloforge-ai",
]

[tool.setuptools.packages.find]
where = ["src"]
